# zsh-focus

./: .prettierrc.json  README.md  install.sh  pyproject.toml  zsh-focus.zsh
.github/workflows/: ci.yml
src/zsh_focus/: __main__.py  cli.py  compiler.py  config.py  engine.py  types.py
src/zsh_focus/data/: zsh_plugin.zsh
tests/: conftest.py  test_check_path.py  test_cli.py
