[project]
name = "zsh-focus"
version = "0.0.1"
description = "Shell focus modes for zsh — block or restrict cd navigation by directory."
authors = [
  { name = "Mihkel Martin Kasterpalu", email = "43957228+MihkelMK@users.noreply.github.com" },
]
urls = { homepage = "https://github.com/MihkelMK/zsh-focus" }
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.12"
dependencies = ["click>=8.3.1", "cloup>=3.0.8", "toml>=0.10.2"]

[dependency-groups]
dev = ["basedpyright>=1.37.4", "ruff>=0.15.0"]

[project.scripts]
zsh-focus = "zsh_focus.__main__:cli"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "zsh_focus"
module-root = "src"

[tool.uv]
compile-bytecode = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
